2013-12-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (newiTempOperand): fixed bug 2235
	* support/regression/tests/bug-2235.c: new, added

2013-12-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version, doc/sdccman.lyx: bumped version to 3.3.2
	* src/SDCCast.c (decorateType, NOT): fixed bug 2232
	* src/SDCCmain.c (printVersionInfo): mention GPL
	* support/regression/tests/bool.c: fixed warning

2013-12-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (outBitC, genIfx): fixed both parts of bug 2233
	* support/regression/tests/bool.c: added test

2013-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix handling of IY during accesses to global variables.

2013-11-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp:
	  Fix use flag initialization in lospre edge splitting.
	* src/SDCCglue.c:
	  Add comment on bug #2089 that allocates strings twice.

2013-11-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_divulong.c: cosmetic, use y0
	* device/lib/_fsadd.c: cosmetic
	* device/lib/clean.mk: clean pic14 and tlcs90
	* device/lib/ds390/tinibios.c (_sdcc_external_startup): do not change stack
	* device/lib/Makefile.in: use TAB's
	* device/non-free/lib/clean.mk: clean pic14
	* device/non-free/lib/pic14/Makefile.in,
	* sdas/as6808/clean.mk,
	* sdas/as8051/clean.mk,
	* sdas/as8xcxxx/clean.mk,
	* sdas/asgb/clean.mk,
	* sdas/asrab/clean.mk,
	* sdas/asstm8/clean.mk,
	* sdas/astlcs90/clean.mk,
	* sdas/asz80/clean.mk,
	* support/sdbinutils/Makefile.in: prevent warnings
	* sim/ucsim/cmd.src/clean.mk: clean cmdpars.* & cmdlex.*
	* src/clean.mk: clean pic14 and stm8
	* src/common.h: cosmetic
	* src/ds390/main.c (_ds390_genAssemblerPreamble): added dpl, dph, acon,
	  (_ds390_genIVT): change addressing mode and stack at __reset_vect,
	  (_ds390_genInitStartup): no need for 10bit stack init here
	* src/port.h: added rtrackUpdate
	* src/SDCCgen.c (emit_raw): try to track constant register contents